force-app/main/default/objects/Survey__c/fields/Agent_Behavior_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Agent_Behavior_Knowledge__c</fullName>
    <label>Agent Behavior - Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>