force-app/main/default/objects/Survey__c/fields/Agent_Low_Score_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Agent_Low_Score_Dispute__c</fullName>
    <label>Agent Low Score Dispute</label>
    <type>TextArea</type>
</CustomField>