force-app/main/default/objects/Survey__c/fields/Agent_Score__c.field-meta.xml
<CustomField>
    <fullName>Agent_Score__c</fullName>
    <label>Agent Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>