force-app/main/default/objects/Survey__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>ANI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>