force-app/main/default/objects/Survey__c/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <label>Call Center</label>
    <length>18</length>
    <type>Text</type>
</CustomField>