force-app/main/default/objects/Survey__c/fields/Call_Time_CST__c.field-meta.xml
<CustomField>
    <fullName>Call_Time_CST__c</fullName>
    <label>Call Time CST</label>
    <type>Time</type>
</CustomField>