force-app/main/default/objects/Survey__c/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <label>Callback?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>