force-app/main/default/objects/Survey__c/fields/CallBack_Completed__c.field-meta.xml
<CustomField>
    <fullName>CallBack_Completed__c</fullName>
    <label>CallBack Completed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>