force-app/main/default/objects/Survey__c/fields/Callbck__c.field-meta.xml
<CustomField>
    <fullName>Callbck__c</fullName>
    <label>Callback #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>