force-app/main/default/objects/Survey__c/fields/CEM_Approved_Dispute__c.field-meta.xml
<CustomField>
    <fullName>CEM_Approved_Dispute__c</fullName>
    <label>CEM Approved Dispute</label>
    <type>TextArea</type>
</CustomField>