force-app/main/default/objects/Survey__c/fields/Feedback_Request_Offered__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Request_Offered__c</fullName>
    <label>Feedback Request Offered</label>
    <length>18</length>
    <type>Text</type>
</CustomField>