force-app/main/default/objects/Survey__c/fields/Ghost_Call_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Ghost_Call_Dispute__c</fullName>
    <label>Ghost Call Dispute</label>
    <type>TextArea</type>
</CustomField>