force-app/main/default/objects/Survey__c/fields/Interaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Interaction_ID__c</fullName>
    <label>Interaction ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>