force-app/main/default/objects/Survey__c/fields/Low_Score__c.field-meta.xml
<CustomField>
    <fullName>Low_Score__c</fullName>
    <label>Low Score</label>
    <length>18</length>
    <type>Text</type>
</CustomField>