force-app/main/default/objects/Survey__c/fields/Low_Score_Completed__c.field-meta.xml
<CustomField>
    <fullName>Low_Score_Completed__c</fullName>
    <label>Low Score Completed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>