force-app/main/default/objects/Survey__c/fields/Overall_Satisfaction_With_WM__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_With_WM__c</fullName>
    <label>Overall Satisfaction With WM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>