force-app/main/default/objects/Survey__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <label>Problem Description</label>
    <type>TextArea</type>
</CustomField>