force-app/main/default/objects/Survey__c/fields/Regarding_A_Problem_Issue__c.field-meta.xml
<CustomField>
    <fullName>Regarding_A_Problem_Issue__c</fullName>
    <label>Regarding A Problem / Issue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>