force-app/main/default/objects/Survey__c/fields/Supervisor_Coaching_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Coaching_Comments__c</fullName>
    <label>Supervisor Coaching/Comments</label>
    <type>TextArea</type>
</CustomField>