force-app/main/default/objects/Survey__c/fields/Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed__c</fullName>
    <label>Survey Completed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>