force-app/main/default/objects/Survey__c/fields/Survey_Language_E_S__c.field-meta.xml
<CustomField>
    <fullName>Survey_Language_E_S__c</fullName>
    <label>Survey Language (E/S)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>