force-app/main/default/objects/Survey__c/fields/Was_Problem_Issue_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Was_Problem_Issue_Resolved__c</fullName>
    <label>Was Problem / Issue Resolved</label>
    <length>18</length>
    <type>Text</type>
</CustomField>